--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "io.github.ylbfdev.wechatwallet"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
     }
     buildTypes {
+        debug {
+            manifestPlaceholders = [BUG_HD_SDK_GENERAL_VALUE: '758cd384514b027127432f5d4491e598']
+        }
         release {
+            manifestPlaceholders = [BUG_HD_SDK_GENERAL_VALUE: '758cd384514b027127432f5d4491e598']
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -22,6 +26,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'im.fir:fir-sdk:latest.integration@aar'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.16'
 }
